--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "url": "https://github.com/kefaise/kefaise-flux.git"
   },
   "devDependencies": {
-    "nodeunit": "^0.9.1",
+    "chai": "^3.3.0",
+    "eslint": "^1.6.0",
+    "grunt": "^0.4.5",
+    "grunt-eslint": "^17.2.0",
+    "grunt-mocha-test": "^0.12.7",
+    "load-grunt-tasks": "^3.3.0",
+    "mocha": "^2.3.3",
     "sinon": "^1.17.1"
   }
 }
